--- a/egg/package.json
+++ b/egg/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "egg": "^2.15.1",
     "egg-jwt": "^3.1.7",
+    "egg-mongodb": "^1.1.1",
     "egg-mysql": "^3.0.0",
+    "egg-redis": "^2.4.0",
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^6.0.0",
     "egg-socket.io": "^4.1.6",
